syntax = "proto3";

import "google/api/annotations.proto";
import "validate/validate.proto";
import "google/protobuf/empty.proto";

package api.core.v1;

option go_package = "galileo/api/core/v1;v1";
option java_multiple_files = true;
option java_package = "api.core.v1";

service Core {
  rpc Register (RegisterRequest) returns (RegisterReply){
    option (google.api.http) = {
      post: "v1/api/user/register",
      body: "*"
    };
  };
  rpc Login (LoginRequest) returns (LoginReply){
    option (google.api.http) = {
      post: "v1/api/user/login"
      body: "*"
    };
  };
  rpc Unregister (UnregisterRequest) returns (UnregisterReply){
    option (google.api.http) = {
      post: "v1/api/user/unregister"
      body: "*"
    };
  };
  rpc Logout (LogoutRequest) returns (LogoutReply){
    option(google.api.http) = {
      post: "v1/api/user/logout"
      body: "*"
    };
  };
  rpc Detail (google.protobuf.Empty) returns (UserDetailReply){
    option(google.api.http) = {
      get: "v1/api/user/detail"
    };
  }
}

message RegisterRequest {
  string username = 1 [(validate.rules).string = {min_len: 3, max_len:16}];
  string password = 2 [(validate.rules).string = {min_len: 8}];
  string phone = 3 [(validate.rules).string.len = 11];
  string email = 4 [(validate.rules).string.email = true];
}

message RegisterReply {
  uint32 id = 1;
  string phone = 2;
  string username = 3;
  string token = 4;
  int64 expiresAt = 5;
  string email = 6;
}

message LogoutRequest {}
message LogoutReply {}

message LoginRequest{
  string username = 1 [(validate.rules).string = {min_len: 3, max_len: 16}];
  string password = 2 [(validate.rules).string = {min_len: 8}];
}

message LoginReply{
  string token = 1;
  int64 expiredAt = 2;
}

message UnregisterRequest {}
message UnregisterReply {}

message UserDetailReply {}